<resources>
    <string name="app_name">tika</string>

    <string name="tk_network_error">mạng bất thường</string>
    <string name="tk_data_gson_error">Ngoại lệ phân tích cú pháp dữ liệu</string>

    <string name="tk_ad_google">Quảng cáo do Google cung cấp</string>
    <string name="tk_ad_download">Xem xong nội dung này</string>

    <string name="tk_download_pop_photo">Đi tới anbom để xem ></string>
    <string name="tk_download_pop_start">Bắt đầu Tải về&#8230;&#8230;</string>
    <string name="tk_download_handle_ing">Xử lý&#8230;&#8230;</string>
    <string name="tk_download_pop_faild">Tải xuống không thành công, vui lòng kiểm tra mạng và tải xuống lại!</string>
    <string name="tk_download_pop_ing">tải xuống %s / %d %%</string>
    <string name="tk_download_pop_handle">Xử lý tài nguyên %d %%</string>
    <string name="tk_download_pop_handle_error">Mạng không bình thường, vui lòng tải lại!</string>

    <string name="tk_share_pop_title">chia sẻ</string>
    <string name="tk_share_pop_unstall">Ứng dụng chưa được cài đặt</string>

    <string name="tk_updata_pop_found">Phiên bản mới được tìm thấy</string>
    <string name="tk_updata_pop_tip">Bạn phải cập nhật phiên bản mới nhất để sử dụng</string>
    <string name="tk_updata_pop_now">thay mới</string>
    <string name="tk_updata_pop_ignore">bỏ mặc</string>
    <string name="tk_updata_pop_no_url">Chưa có liên kết tải xuống</string>
    <string name="tk_updata_pop_install">Cài đặt</string>

    <string name="tk_user_liked">bạn đã thích!</string>
    <string name="tk_like_success">Đã thích thành công!</string>
    <string name="tk_unlike_success">Hủy like thành công!</string>

    <string name="tk_report_title">báo cáo</string>
    <string name="tk_report_title_1">Nội dung vi phạm</string>
    <string name="tk_report_one_1">Nội dung tục tĩu</string>
    <string name="tk_report_one_2">Thông tin sai lệch về các vấn đề thời sự</string>
    <string name="tk_report_one_3">Tội ác</string>
    <string name="tk_report_one_4">Quảng cáo spam, bán hàng giả, v.v.</string>
    <string name="tk_report_one_5">Lan truyền tin đồn</string>
    <string name="tk_report_one_6">Bị nghi ngờ gian lận</string>
    <string name="tk_report_one_7">Sự sỉ nhục</string>
    <string name="tk_report_one_8">Hành vi nguy hiểm</string>
    <string name="tk_report_one_9">Bị nghi ngờ gây quỹ bất hợp pháp</string>
    <string name="tk_report_one_10">định hướng giá trị kém</string>
    <string name="tk_report_title_2">vi phạm quyền</string>
    <string name="tk_report_two_1">Vi phạm danh tiếng, quyền riêng tư, quyền chân dung, v.v.</string>
    <string name="tk_report_two_2">Ăn cắp nội dung</string>
    <string name="tk_report_title_3">tuổi vị thành niên</string>
    <string name="tk_report_three_1">Hành vi sai trái nhỏ</string>
    <string name="tk_report_three_2">Nội dung không phù hợp cho trẻ vị thành niên xem</string>
    <string name="tk_report_title_4">khác</string>
    <string name="tk_report_four_1">khó chịu</string>
    <string name="tk_report_four_2">Bootstrap giao dịch riêng tư</string>
    <string name="tk_report_four_3">Nghi ngờ hoặc xúi giục tự sát</string>
    <string name="tk_report_four_4">Thu hút lượt thích, lượt chia sẻ và sự chú ý</string>
    <string name="tk_report_detail_tip">Báo cáo của bạn sẽ được chấp nhận trong vòng 12 giờ, nếu báo cáo thành công, kết quả sẽ được thông báo trong thời gian sớm nhất. Vui lòng cố gắng gửi tài liệu và mô tả báo cáo hoàn chỉnh.</string>
    <string name="tk_report_detail_reson">Lý do báo cáo</string>
    <string name="tk_report_detail_memo">Mô tả báo cáo (tùy chọn)</string>
    <string name="tk_report_detail_memo_hint">Mô tả chi tiết lý do báo cáo</string>
    <string name="tk_report_detail_commit">Gửi đi</string>
    <string name="tk_report_detail_commit_success">Báo cáo thành công!</string>

    <string name="tk_setting_title">cài đặt</string>
    <string name="tk_setting_version">Phiên bản : V%s</string>
    <string name="tk_setting_package_id">id gói : %s</string>
    <string name="tk_setting_video_id">ID Video : %d</string>
    <string name="tk_setting_rate">để đánh giá</string>
    <string name="tk_setting_video">Video của tôi</string>
    <string name="tk_setting_cache">xóa bộ nhớ cache</string>
    <string name="tk_setting_cache_success">Đã xóa thành công!</string>
    <string name="tk_setting_cache_tip_title">Để ý</string>
    <string name="tk_setting_cache_tip">Lưu ý rằng nếu bạn xóa bộ nhớ cache, tất cả video sẽ cần được tải lại, quá trình này có thể mất nhiều thời gian hơn. Bạn có chắc chắn muốn xóa bộ nhớ cache không?</string>

    <string name="tk_front_video_title">phổ biến</string>
    <string name="tk_front_message_title">thông tin</string>
    <string name="tk_front_message_empty_title">Không có tin tức cho bây giờ</string>
    <string name="tk_front_message_empty">Tin nhắn của bạn sẽ xuất hiện ở đây, vì vậy đừng ngại và hãy là người đầu tiên để lại tin nhắn!</string>
    <string name="tk_front_photos_title">Hình nền</string>
    <string name="tk_front_photos_set">Cài đặt hình nền</string>
    <string name="tk_front_photos_setting">Thiết lập&#8230;&#8230;</string>
    <string name="tk_front_photos_set_success">Thiết lập thành công!</string>
    <string name="tk_front_photos_set_faild">Thiết lập không thành công, vui lòng thử lại！</string>
    <string name="tk_front_edit_title">Chỉnh sửa hình ảnh</string>

    <string name="image_doodle">Doodle</string>
    <string name="image_text">Text</string>
    <string name="image_mosaic">Mosaic</string>
    <string name="image_clip">Clip</string>
    <string name="image_reset">Reset</string>
    <string name="image_done">Done</string>
    <string name="image_cancel">Cancel</string>
    <string name="image_rotate">Rotate</string>

    <string name="image_mosaic_tip">Please apply blur directly on the picture</string>
    <string name="image_undo">Revoke</string>
    <string name="image_all_photo">All Photos</string>
    <string name="image_original">Original</string>
    <string name="image_preview">Preview</string>

    <string name="image_enable_storage_permission">Turn on storage permissions</string>

    <string name="image_enable_storage_tips">The photo album function requires storage permission, please enable the storage permission for this app in the settings</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="switch_encrypt_key_part_1">lK0iP</string>
    <string name="switch_encrypt_key_part_2">6dG6i</string>
    <string name="switch_encrypt_key_part_3">B5lI4</string>
    <string name="switch_encrypt_key_part_end">d</string>
    <string name="switch_encrypt_vi_part_1">21103</string>
    <string name="switch_encrypt_vi_part_2">62020</string>
    <string name="switch_encrypt_vi_part_3">21001</string>
    <string name="switch_encrypt_vi_part_end">0</string>
    <string name="switch_decrypt_key_part_1">WJ6uG</string>
    <string name="switch_decrypt_key_part_2">tqIgn</string>
    <string name="switch_decrypt_key_part_3">DmDGD</string>
    <string name="switch_decrypt_key_part_end">9</string>
    <string name="switch_decrypt_vi_part_1">83291</string>
    <string name="switch_decrypt_vi_part_2">82456</string>
    <string name="switch_decrypt_vi_part_3">73714</string>
    <string name="switch_decrypt_vi_part_end">9</string>
</resources>