<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:padding="16dp"
        android:src="@mipmap/tk_icon_front_photos_back" />

    <LinearLayout
        android:id="@+id/ll_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:src="@mipmap/tk_ic_launcher"
            app:riv_corner_radius="4dp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textColor="@color/color_333333" />
    </LinearLayout>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_version"
        app:srlEnableNestedScrolling="true"
        app:srlEnableOverScrollBounce="true"
        app:srlEnablePureScrollMode="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:alpha="0.3"
                    android:background="@color/color_181818" />

                <RelativeLayout
                    android:id="@+id/rl_video"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tx_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/tk_setting_video"
                        android:textColor="@color/color_333333"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/tk_icon_next" />
                </RelativeLayout>

                <View
                    android:id="@+id/line3"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:alpha="0.3"
                    android:background="@color/color_181818" />

                <RelativeLayout
                    android:id="@+id/rl_jump"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/tx_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/tk_setting_rate"
                        android:textColor="@color/color_333333"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/tk_icon_next" />
                </RelativeLayout>

                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:alpha="0.3"
                    android:background="@color/color_181818" />

                <RelativeLayout
                    android:id="@+id/rl_clean"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/tx_clean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/tk_setting_cache"
                        android:textColor="@color/color_333333"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/cache"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@+id/next"
                        android:text="0 KB"
                        android:textColor="@color/color_aaaaaa"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/tk_icon_next" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

    <ImageView
        android:id="@+id/video"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="58dp"
        android:src="@mipmap/tk_icon_take_video"
        android:visibility="gone" />
</RelativeLayout>